# recipes

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/recipes/recipes/: settings.py  urls.py
backend/recipes/user_recipe/: apps.py  auth_api.py  exceptions.py  models.py  redis_api.py  serializers.py  tests.py  views.py
backend/recipes/user_recipe/celery_tasks/: celery_config.py  tasks.py
backend/recipes/user_recipe/migrations/: 0001_initial.py
frontend/MyApp/: App.tsx  package-lock.json  package.json  tsconfig.json
frontend/MyApp/assets/: types.ts
frontend/MyApp/assets/json/: recipes.json
frontend/MyApp/screens/: RecipeDetails.tsx  RecipeList.tsx
